--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="hp-welcome-banner-container">
+  <h2 class="hp-banner-title">Welcome to hospital!</h2>
+
+  <div class="hp-description-container">
+    <p class="hp-title">Caring for Life</p>
+    <p class="hp-description">
+      Leading the Way in Medical Excellence and Individual approach to Everyone
+    </p>
+    <hp-styled-button btnText="About us" btnType="button" />
+  </div>
+
+  <hp-book-an-appointment />
+</div>
+<div class="hp-contacts-container"></div>
