--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,6 +9,6 @@
     <hp-styled-button btnText="About us" btnType="button" />
   </div>
 
-  <hp-book-an-appointment />
+  <hp-book-appointment />
 </div>
 <div class="hp-contacts-container"></div>
