--- a/src/app/shared/components/contacts/contacts.component.html
+++ b/src/app/shared/components/contacts/contacts.component.html
@@ -5,8 +5,8 @@
     <div class="hp-contact-item" *ngFor="let contact of contacts">
       <img [src]="contact.img" alt="contact_svg" class="hp-contact-svg" />
       <p class="hp-contact-title">{{ contact.title | uppercase }}</p>
-      <p>{{ contact.description_1 }}</p>
-      <p>{{ contact.description_2 }}</p>
+      <p>{{ contact.description1 }}</p>
+      <p>{{ contact.description2 }}</p>
     </div>
   </div>
 </div>
