fix: change mocks to constants and replace svgs with svgs from third-party github

--- a/src/app/shared/components/book-appointment/book-appointment.component.html
+++ b/src/app/shared/components/book-appointment/book-appointment.component.html
@@ -2,7 +2,7 @@
   <p class="hp-title">Book an Appointment</p>
   <img
     class="hp-calendar-svg"
-    src="../../../../assets/images/calendar.svg"
+    src="https://raw.githubusercontent.com/NikaKlokava/hospital-portal-assets/main/svgs/calendar.svg"
     alt="calendar_svg"
   />
 </div>
