--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ $brown-color: #756867;
 $accent-color: #ff8d3f;
 $light-grey-color: #d5d6d2;
 
-$primary-font-family: "Domine";
+$primary-font-family: "Domine", sans-serif;
 $secondary-font-family: "Yeseva One", sans-serif;
 
 @font-face {
