--- a/src/app/shared/components/doctor-card/doctor-card.component.scss
+++ b/src/app/shared/components/doctor-card/doctor-card.component.scss
@@ -3,7 +3,12 @@
 .hp-doctor-card-container {
   @include flexColumnWithGap($gap: 0px);
   position: relative;
-  width: 250px;
+  width: 200px;
+
+  .hp-doctor-photo {
+    height: 200px;
+    object-fit: cover;
+  }
 
   .hp-top-circle-container {
     position: absolute;
@@ -12,15 +17,15 @@
     justify-content: center;
     right: 10px;
     top: 10px;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border-radius: 15px;
     background-color: $dark-color;
     cursor: pointer;
 
     .hp-star {
-      width: 20px;
-      height: 20px;
+      width: 15px;
+      height: 15px;
     }
   }
 
@@ -30,6 +35,7 @@
     padding: 8px;
 
     p {
+      font-size: x-small;
       color: $primary-color;
       font-family: $secondary-font-family;
     }
