--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,12 @@
 <div class="hp-header-container">
   <div class="hp-navbar-container">
-    <a *ngFor="let navbarItem of navbarItems" class="hp-navbar-item">{{
-      navbarItem
-    }}</a>
+    <a
+      *ngFor="let navbarItem of navbarItems"
+      [routerLink]="[navbarItem.link]"
+      routerLinkActive="router-link-active"
+      class="hp-navbar-item"
+      >{{ navbarItem.title }}</a
+    >
   </div>
   <hp-styled-button btnType="text" btnText="Login" (btnClick)="login()" />
 </div>
