--- a/src/app/shared/components/contacts/contacts.component.html
+++ b/src/app/shared/components/contacts/contacts.component.html
@@ -3,7 +3,7 @@
   <h2 class="hp-title">Contacts</h2>
   <div class="hp-contact-items-container">
     <div class="hp-contact-item" *ngFor="let contact of contacts">
-      <img [src]="contact.img" alt="contact_svg" class="hp-contact-svg" />
+      <img [src]="contact.img" alt="" class="hp-contact-svg" />
       <p class="hp-contact-title">{{ contact.title | uppercase }}</p>
       <p>{{ contact.description1 }}</p>
       <p>{{ contact.description2 }}</p>
