--- a/src/app/shared/components/doctor-card/doctor-card.component.html
+++ b/src/app/shared/components/doctor-card/doctor-card.component.html
@@ -2,11 +2,11 @@
   <div class="hp-top-circle-container" *ngIf="isAdmin">
     <img
       src="https://raw.githubusercontent.com/NikaKlokava/hospital-portal-assets/main/svgs/star.svg"
-      alt="star_svg"
+      alt=""
       class="hp-star"
     />
   </div>
-  <img [src]="doctor.photo" alt="doctor_img" class="hp-doctor-photo" />
+  <img [src]="doctor.photo" alt="" class="hp-doctor-photo" />
 
   <div class="hp-card-description-container">
     <h4 class="hp-doctor-name">{{ doctor.name }}</h4>
