--- a/src/app/shared/components/book-appointment/book-appointment.component.html
+++ b/src/app/shared/components/book-appointment/book-appointment.component.html
@@ -3,6 +3,6 @@
   <img
     class="hp-calendar-svg"
     src="https://raw.githubusercontent.com/NikaKlokava/hospital-portal-assets/main/svgs/calendar.svg"
-    alt="calendar_svg"
+    alt=""
   />
 </div>
