feat: update doctors service with sorting, filtering, pagination and serching

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -53,7 +53,7 @@
         src="https://raw.githubusercontent.com/NikaKlokava/hospital-portal-assets/main/svgs/heart.svg"
         alt=""
       />
-      <p>{{ specialty }}</p>
+      <p>{{ specialty.name }}</p>
     </div>
   </div>
 </div>
