--- a/src/app/doctors/doctors.component.html
+++ b/src/app/doctors/doctors.component.html
@@ -22,6 +22,25 @@
 </div>
 
 <div class="hp-doctors-list-container" #target>
+  <div class="hp-filter-by-container">
+    <h4 class="hp-filter-by-title">Filter by:</h4>
+    <p class="hp-filter-criterion">Specialization</p>
+    <div class="hp-checkboxes-container">
+      <div
+        *ngFor="let item of visibleSpecialties | async; let i = index"
+        class="hp-checkbox-container"
+      >
+        <input
+          type="checkbox"
+          [id]="i"
+          [(ngModel)]="item.checked"
+          (change)="onSpecialtiesChange()"
+        />
+        <label [for]="i">{{ item.name }}</label>
+      </div>
+    </div>
+  </div>
+
   <div class="hp-card-table-switcher-container">
     <button
       type="button"
