--- a/src/app/shared/components/doctor-card/doctor-card.component.html
+++ b/src/app/shared/components/doctor-card/doctor-card.component.html
@@ -10,7 +10,7 @@
 
   <div class="hp-card-description-container">
     <h4 class="hp-doctor-name">{{ doctor.name }}</h4>
-    <p>Experience: {{ doctor.experience }}</p>
+    <p>Experience: {{ doctor.experience }} years</p>
     <p>{{ doctor.description }}</p>
   </div>
   <p class="hp-specialization">{{ doctor.specialization | uppercase }}</p>
