--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -26,7 +26,7 @@
 <div class="hp-top-doctors-content-container">
   <h3>Best doctors of the week</h3>
   <div class="hp-top-doctors-container">
-    <app-doctor-card
+    <hp-doctor-card
       *ngFor="let topDoctor of topDoctors | async; trackBy: trackTopDoctorsByFn"
       [doctor]="topDoctor"
     />
