--- a/src/app/doctors/views/card-view/card-view.component.html
+++ b/src/app/doctors/views/card-view/card-view.component.html
@@ -1,1 +1,6 @@
-<p>card-view works!</p>
+<div class="hp-card-view-container">
+  <hp-doctor-card
+    *ngFor="let doctor of doctors; trackBy: trackByFn"
+    [doctor]="doctor"
+  />
+</div>
