fix: fix comments

--- a/src/app/doctors/doctors.component.html
+++ b/src/app/doctors/doctors.component.html
@@ -80,8 +80,8 @@
     >
 
     <hp-pagination
-      [currentPage]="puginationCurrent"
-      [totalPages]="puginationSize"
+      [currentPage]="paginationCurrent"
+      [totalPages]="paginationSize"
       (pageChanged)="onPageChange($event, target)"
     />
   </div>
