feat: implement statistics page with echarts

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 $primary-color: #fff;
 $dark-color: #353c3f;
 $brown-color: #756867;
-$accent-color: #ff8d3f;
+$accent-color: #a4bc41;
 $light-grey-color: #d5d6d2;
 
 $primary-font-family: "Domine", sans-serif;
