--- a/src/app/shared/components/book-appointment/book-appointment.component.scss
+++ b/src/app/shared/components/book-appointment/book-appointment.component.scss
@@ -4,26 +4,60 @@
   align-self: center;
   justify-self: flex-end;
 
-  .hp-book-an-appointment-container {
+  .book-an-appointment-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     column-gap: 15px;
     padding: 20px;
     background-color: $accent-color;
+    border: none;
+    border-radius: 30px;
     transition: 0.3s ease-in-out;
+    box-shadow: 0 0 0 0 $accent-color;
+
+    -webkit-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    -moz-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    -ms-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+
+    transition: all 300ms ease-in-out;
+
     cursor: pointer;
 
-    .hp-title {
-      color: $dark-color;
-    }
-
-    .hp-calendar-svg {
+    .calendar-svg {
       height: 40px;
     }
   }
 
-  .hp-book-an-appointment-container:hover {
-    box-shadow: 1px 1px 10px $dark-color;
+  .book-an-appointment-container:hover {
+    box-shadow: 1px 1px 10px 10px $brown-color;
+    -webkit-animation: none;
+    -moz-animation: none;
+    -ms-animation: none;
+    animation: none;
+  }
+}
+
+@-webkit-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 15px rgba(232, 76, 61, 0);
+  }
+}
+@-moz-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 15px rgba(232, 76, 61, 0);
+  }
+}
+
+@-ms-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 15px rgba(232, 76, 61, 0);
+  }
+}
+
+@keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 15px rgba(232, 76, 61, 0);
   }
 }
