--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,12 +1,12 @@
-<div class="login-form">
+<div class="hp-login-form">
   <h3>Login to your account</h3>
   <p>Unlock the best of Hospital Portal now!</p>
-  <div class="login-btn-container">
+  <div class="hp-login-btn-container">
     <img
       alt=""
       src="https://raw.githubusercontent.com/NikaKlokava/hospital-portal-assets/main/svgs/google.svg"
-      class="login-img"
+      class="hp-login-img"
     />
-    <button class="login-btn" (click)="login()">Login with Google</button>
+    <button class="hp-login-btn" (click)="login()">Login with Google</button>
   </div>
 </div>
