--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
-<div class="profile-page-container">
-  <div class="profile-header-container">
-    <div *ngIf="userInfo | async as user">
+<div class="hp-profile-page-container" *ngIf="userInfo | async as user">
+  <div class="hp-profile-header-container">
+    <div>
       <h3>Welcome, {{ user.displayName }}!</h3>
     </div>
 
@@ -9,7 +9,7 @@
 
   <hp-loader>
     <div
-      class="appintments-container"
+      class="hp-appintments-container"
       *ngIf="appointmentsData | async as appointments"
     >
       <div *ngIf="appointments.length === 0; else showAppointments">
@@ -17,16 +17,16 @@
       </div>
       <ng-template #showAppointments>
         <div
-          class="appointment-item-container"
+          class="hp-appointment-item-container"
           *ngFor="let appointment of appointments"
           [appBoxColor]="appointment.date"
         >
-          <div class="appointment-user-data-container">
+          <div class="hp-appointment-user-data-container">
+            <h4>{{ user.displayName }}</h4>
             <p>Birth: {{ appointment.birthDate }}</p>
-            <small>Comments: {{ appointment.comments }}</small>
           </div>
-          <div class="vertical-line"></div>
-          <div class="appointment-data-container">
+          <div class="hp-vertical-line"></div>
+          <div class="hp-appointment-data-container">
             <p>Date: {{ appointment.date }}</p>
             <p>Time: {{ appointment.time }}</p>
             <p>Doctor: {{ appointment.doctor }}</p>
