--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,10 +1,10 @@
 @import "../../../../styles";
 
-.header-container {
+.hp-header-container {
   @include containerStyle;
   justify-content: space-between;
 
-  .profile-btn {
+  .hp-profile-btn {
     border: none;
     background-color: transparent;
     color: $primary-color;
@@ -12,15 +12,15 @@
     transition: 0.2s ease-in-out;
     font-family: $primary-font-family;
   }
-  .profile-btn:hover {
+  .hp-profile-btn:hover {
     color: $accent-color;
   }
 
-  .links-container {
+  .hp-links-container {
     display: flex;
     column-gap: 20px;
 
-    .link-item {
+    .hp-link-item {
       text-decoration: none;
       color: $primary-color;
       font-size: 14px;
@@ -28,16 +28,16 @@
       cursor: pointer;
     }
 
-    .link-item:hover {
+    .hp-link-item:hover {
       color: $accent-color;
     }
 
-    .link-item.router-link-active {
+    .hp-link-item.router-link-active {
       color: $accent-color;
     }
   }
 
-  .logout-btns-container {
+  .hp-logout-btns-container {
     display: flex;
     column-gap: 30px;
   }
