--- a/src/app/shared/components/doctor-card/doctor-card.component.scss
+++ b/src/app/shared/components/doctor-card/doctor-card.component.scss
@@ -21,6 +21,7 @@
     height: 25px;
     border-radius: 15px;
     background-color: $dark-color;
+    border: none;
     cursor: pointer;
 
     .hp-star {
@@ -55,5 +56,6 @@
     background-color: $dark-color;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    text-transform: uppercase;
   }
 }
