--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,8 +11,8 @@ $primary-padding: 30px 120px;
 
 @font-face {
   font-family: "Domine";
-  src: url("assets/fonts/Domine/Domine-VariableFont_wght.ttf")
-    format("truetype");
+  src: url(https://fonts.gstatic.com/s/domine/v23/L0x8DFMnlVwD4h3htfqndSk.woff2)
+    format("woff2");
   font-weight: normal;
   font-style: normal;
 }
