fix: fix code issues

--- a/src/app/shared/components/appointment-form/appointment-form.component.html
+++ b/src/app/shared/components/appointment-form/appointment-form.component.html
@@ -102,6 +102,7 @@
     <hp-styled-button
       [btnText]="'Submit'"
       [btnType]="'submit'"
+      [disabled]="appointmentForm.invalid"
       [class.disabled]="appointmentForm.invalid"
     />
   </div>
