--- a/src/app/shared/components/appointment-form/custom-form-control/custom-form-control/custom-form-control.component.html
+++ b/src/app/shared/components/appointment-form/custom-form-control/custom-form-control/custom-form-control.component.html
@@ -11,6 +11,8 @@
     [type]="inputType"
     [id]="inputId"
     class="input"
+    [max]="inputId === 'birth' && currentDate"
+    [min]="inputId === 'date' && currentDate"
     [formControl]="customFormControl"
   />
 </form>
