--- a/src/app/shared/components/styled-button/styled-button.component.html
+++ b/src/app/shared/components/styled-button/styled-button.component.html
@@ -1,3 +1,8 @@
-<button [type]="btnType" class="hp-styled-button" (click)="onClick()">
+<button
+  [type]="btnType"
+  class="hp-styled-button"
+  (click)="onClick()"
+  [disabled]="disabled"
+>
   {{ btnText }}
 </button>
